[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/EnemySpawner.gd" type="Script" id=1]

[node name="EnemySpawner" type="Node2D"]

script = ExtResource( 1 )
spawn_obstackle_timer = 1
spawn_obstackle_limit = 0.4
update_sawn_time_timer = 5
tap_enemies_p1 = 1
swipe_enemy_cloud_p1 = 1
swipe_enemy_storm_p1 = 1
tap_enemies_p2 = 1
swipe_enemy_cloud_p2 = 1
swipe_enemy_storm_p2 = 1

[node name="Timer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="UpdateSpawnTimeTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[connection signal="update_timer" from="." to="." method="_on_EnemySpawner_update_timer"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="UpdateSpawnTimeTimer" to="." method="_on_UpdateSpawnTimeTimer_timeout"]


